# ffi-libs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.gitlab-ci/commands/: build_release.sh  releases_assets.sh  releases_update.sh
.gitlab-ci/stages/: build_release.yml  releases_assets.yml
rhandlebars/: Cargo.toml
rhandlebars/src/: lib.rs  render.rs
rpkg/: Cargo.toml
rpkg/examples/: pkg_addon_scan.rs  pkg_norm_scan.rs
rpkg/src/: dependencies.rs  lib.rs  pkg.rs
rpkg/src/rpkg/: c_api.rs  lib.rs
rpkg/src/rpkg/core/: assets.rs  build_collection.rs  build_map.rs  build_target.rs  dependencies.rs  matcher.rs  mod.rs  pkg.rs  scan.rs
rpkg/src/rpkg/toml/: build_target.rs  mod.rs  pkg.rs
rpkg/src/rpkg/toml/build_target/: bundle.rs  dylib.rs  file.rs  subscene.rs  zip.rs
rtoml/: Cargo.toml
rtoml/src/: c_api.rs  lib.rs  matcher.rs
rtoml/src/c_api/: array.rs  array_of_tables.rs  document.rs  inline_table.rs  item.rs  table.rs  value.rs
rutils/: Cargo.toml
rutils/src/: c_api.rs  ffi.rs  lib.rs  path.rs
rxml/: Cargo.toml
rxml/src/: c_api.rs  lib.rs
rxml/src/core/: document.rs  element.rs  mod.rs
tests/: app-settings.hbs  example.toml  example.xml  pkg.toml
tests/csharp-link-rust/: Program.cs  csharp-link-rust.csproj  csharp-link-rust.sln
tests/csharp-link-rust/libs/: rhandlebars.cs  rpkg.cs  rtoml.cs  rxml.cs
tests/handlebars-tpl/: app_android_dev.toml  app_android_dev_template.toml
tests/pkg-dependencies/BuildAssets/: .pkg  rel.pkg  rel2.pkg
tests/pkg-dependencies/BuildAssets/Material/: .pkg
tests/pkg-dependencies/BuildAssets/Material/DepMaterial/: .pkg
tests/pkg-dependencies/BuildAssets/Material/SubMaterial/: .pkg
tests/pkg-dependencies/BuildAssets/PKGTest/: .pkg
tests/pkg-dependencies/BuildAssets/Prefab/: .pkg
tests/pkg-dependencies/BuildAssets/Shader/: .pkg
tests/pkg-dependencies/BuildAssets/addon1/Material/DepMaterial/: .pkg
tests/pkg-dependencies/BuildAssets/addon1/Prefab/: .pkg
tests/pkg-dependencies/BuildAssets/addon2/: .pkg
tests/pkg-dependencies/BuildAssets/arts/: .pkg
tests/pkg-dependencies/CircularDep/A/: .pkg
tests/pkg-dependencies/CircularDep/B/: .pkg
tests/pkg-dependencies/CircularDep/C/: .pkg
tests/pkg-dependencies/CircularDep/D/: .pkg
