[package]
name = "rhandlebars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rhandlebars"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
handlebars = "4.3.6"
rutils =  {version ="0.0.1", path="../rutils" }