[package]
name = "rhandlebars"
version = "0.0.3"
edition = "2021"

[lib]
name = "rhandlebars"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
handlebars = "4.3.6"
toml = "0.7.3"
serde_json = "1.0.96"
chrono = "0.4.24"

funny-utils-rs = { git = "https://git.sofunny.io/devtools/libs/funny-utils-rs", tag = "0.1.1" }