[package]
name = "rpkg"
version = "0.1.1"
edition = "2021"

[lib]
name = "rpkg"
path = "src/rpkg/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pkg"
path = "src/bin/pkg.rs"

[dependencies]
globset = "0.4.10"
walkdir = "2.3.3"
toml = "0.7.3"
serde = { version = "1.0.159", features = ["derive"] }
rutils = { version ="0.0.1", path="../rutils" }
clap = { version = "4.0.8", features = ["derive", "cargo"] }
anyhow = "1.0.71"
lazy_static = "1.4.0"


